<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>WebDAV servlet</name>
	<groupId>com.corinis.external</groupId>
	<artifactId>webdav-servlet</artifactId>
	<version>2.2.0-SNAPSHOT</version>
	<inceptionYear>2011</inceptionYear>
	<description>Modified version of the net.sf.webdav-servlet:webdav-servlet imported from github (ifunsoftware)
Extended with webdav extension from https://github.com/iviews/webdav-servlet (http://www.i-views.de/)</description>

	<scm>
		<connection>scm:git:https://github.com/corinis/webdav-servlet.git</connection>
		<url>https://github.com/corinis/webdav-servlet</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.0.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>5.1.2.RELEASE</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.13</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock</artifactId>
			<version>2.5.1</version>
			<scope>test</scope>
		</dependency>

		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.1</version>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
					<forkMode>always</forkMode>
				</configuration>
			</plugin>
		</plugins>

	</build>

<distributionManagement>
		<repository>
			<id>corinis.corinis</id>
			<url>http://build.internal.corinis.net/nexus/repository/corinis-release/</url>
			<layout>default</layout>
		</repository>
		<snapshotRepository>
			<id>corinis.dev</id>
			<url>http://build.internal.corinis.net/nexus/repository/corinis-snapshot/</url>
			<layout>default</layout>
		</snapshotRepository>
	</distributionManagement>
</project>
        
